fixed screenshot horizontal positioning on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -801,7 +801,7 @@ section.feature.feature-1 .description:last-child, section.feature.feature-3 .de
   }
 
   section.feature.feature-1 .iphone, section.feature.feature-3 .iphone {
-      /*margin-left: 17.05961%;*/
+      margin-left: 10%;
       /*margin: auto;*/
       /*float:none;*/
       margin-top: 0;
@@ -852,7 +852,7 @@ section.feature.feature-2 .description:last-child, section.feature.feature-4 .de
   }
 
   section.feature.feature-2 .iphone, section.feature.feature-4 .iphone {
-      margin-left: 17.05961%;
+      margin-left: 10%;
       /*margin: auto;*/
       /*float:none;*/
       margin-top: 0;
